# fssim

./: .gitignore  .travis.yml  CMakeLists.txt  LEIAME.txt  README.md
cmake/: FindReadline.cmake
experiments/: CMakeLists.txt  create-files.sh  experiments.c
include/fssim/: bmp.h  cli.h  common.h  constants.h  fat.h  file.h  file_utils.h  filesystem.h  fsinfo.h  llist.h  simulator.h
presentation/: .~lock.presentation.odp#  presentation.odp  results-1.csv  results-2.csv  results-3.csv  results.ods
src/: CMakeLists.txt  bmp.c  cli.c  fat.c  file.c  file_utils.c  filesystem.c  fssim.c  llist.c  simulator.c
tests/: CMakeLists.txt  test-bmp.c  test-fat.c  test-file.c  test-file_utils.c  test-filesystem.c  test-fsinfo.c  test-llist.c
